--- a/resources/scss/bootstrap/_variables.scss
+++ b/resources/scss/bootstrap/_variables.scss
@@ -34,8 +34,8 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #00aaf0 !default;
-$blue-dark:    #0050A7 !default;
+$blue:    #1190f8 !default;
+$blue-dark:    #0a46a0 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
