--- a/content/_include/header.html
+++ b/content/_include/header.html
@@ -4,32 +4,10 @@
         <h1 class="logo"><a href="../main/main.html"><span>퍼스트엑씨앤씨</span></a></h1>
         <div class="gnb">
             <ul>
-                <li><a href="../about/company.html">We</a></li>
-                <li><a href="../business/platform_business.html">Make it</a></li>
-                <li><a href="../business/platform_business.html">Smart Communication</a></li>
-                <li><a href="#">CONTACT</a>
-                    <div class="gnb-sub">
-                        <div class="container">
-                            <div class="gnb-sub-group">
-                                <div class="inner">
-                                    <div class="depth1">
-                                        <strong>채용</strong>
-                                        <a href="javascript:;" class="all">전체메뉴보기</a>
-                                    </div>
-                                    <div class="depth2">
-                                        <ul>
-                                            <li><a href=""><span>채용공고</span></a></li>
-                                            <li><a href=""><span>인재상</span></a></li>
-                                            <li><a href=""><span>채용방법 및 절차</span></a></li>
-                                            <li><a href=""><span>복리후생제도</span></a></li>
-                                            <li><a href=""><span>채용 FAQ</span></a></li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+                <li><a href="#section2">We</a></li>
+                <li><a href="#section3">Make it</a></li>
+                <li><a href="#section4">Smart Communication</a></li>
+                <li><a href="#section5">CONTACT</a></li>
             </ul>
         </div>
         <!-- <div class="util">
@@ -45,28 +23,4 @@
             </div>
         </div> -->
     </div>
-
-    <div class="header-bottom">
-        <div class="gnb-depth2">
-            <div class="container">
-                <ul>
-                    <li class="active"><a href="../about/company.html">회사소개</a></li>
-                    <li><a href="">CEO 인사말</a></li>
-                    <li><a href="">계열사</a></li>
-                    <li><a href="../about/location_gangchon.html">사업장소개</a></li>
-                    <li><a href="">고객지원</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
 </header>
-
-<div class="sitemap">
-    <div class="sitemap-header">
-        <h1>전체메뉴</h1>
-        <button type="button" class="close"><i class="icon-close-white"></i></button>
-    </div>
-    <div class="sitemap-body">
-
-    </div>
-</div>
