--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -84,7 +84,7 @@
     .swiper-slide{height: 100%;width: 100% !important;overflow: hidden;}
     .item{
         position: absolute;width: 100%;height: 100%;left: 0;top: 0;background-size: cover;background-position: center;display: flex;align-items: center;transform: scale(1);-webkit-transition: transform 5s;transition: transform 5s;
-        &::after{content: '';width: 110%;height: 110%;position: absolute;left: -5%;top: -5%;display: block;background: rgba(0,0,0,0.4);}
+        &::after{content: '';width: 110%;height: 110%;position: absolute;left: -5%;top: -5%;display: block;background: rgba(0,0,0,0.5);}
     }
     .swiper-slide-active{
         .item{transform: scale(1.08);}
@@ -274,6 +274,30 @@
     }
 }
 
+.map{
+    width: 100% !important;height: 360px !important;position: relative;
+    .wrap_map{position: absolute;width: 100%;height: 100% !important;left: 0;top: 0;}
+    @include media-breakpoint-down(md) {
+        height: 240px !important;
+    }
+}
+
+.contactus{
+    text-align: center;
+    dl{
+        display: inline-flex;flex-wrap: wrap;align-items: center;font-size: 20px;
+        dt{flex: 0 0 40px;text-align: left;margin: 15px 0;}
+        dd{flex: 1 1 calc(100% - 50px);text-align: left;margin: 15px 0;}
+    }
+    @include media-breakpoint-down(md) {
+        dl{
+            font-size: 14px;margin-top: 10px;
+            dt{margin: 5px 0;flex: 0 0 30px;}
+            dd{margin: 5px 0;flex: 1 1 calc(100% - 30px)}
+        }
+    }
+}
+
 body.body-main{
     .header{
         background:transparent;transform: translateY(0) !important;
@@ -294,6 +318,7 @@ body.fp-viewing-section3,
 body.fp-viewing-section5{
     .header{
         background:#fff;
+        .header-top{border-bottom: 1px solid rgba(0,0,0,0.15);}
         .logo{color: #000;}
         .logo .icon-logo{background-image:url('../images/lg-douzone-color.svg');}
         .gnb > ul > li > a{color:#000}
