--- a/content/_include/footer.html
+++ b/content/_include/footer.html
@@ -1,6 +1,9 @@
 <footer class="footer">
     <div class="footer-bottom">
         <div class="container d-flex">
+            <div class="footer-logo">
+                <img src="../../resources/images/logo-vertical.svg" alt="">
+            </div>
             <div class="footer-info">
                 <div>
                     <span>(주)퍼스트엑트앤씨</span>
