--- a/content/_include/header.html
+++ b/content/_include/header.html
@@ -1,7 +1,6 @@
 <header class="header">
     <div class="header-top">
-        <!-- <h1 class="logo"><a href="../main/main.html" class="icon-logo"><span class="sr-only">DOUZONE</span></a></h1> -->
-        <h1 class="logo"><a href="../main/main.html"><span>퍼스트엑씨앤씨</span></a></h1>
+        <h1 class="logo"><a href="../main/main.html" class="icon-logo"><span class="sr-only">퍼스트엑씨앤씨</span></a></h1>
         <div class="gnb">
             <ul>
                 <li><a href="#section2">We</a></li>
