--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3863,9 +3863,10 @@ body:not(.body-main) .header .header-top { border-bottom: 0; }
 
 .header .logo { position: absolute; left: 40px; top: 50%; transform: translateY(-50%); font-size: 1.5rem; color: #fff; }
 
-.header .logo .icon-logo { display: block; background-image: url("../images/lg-douzone-color.svg"); width: 150px; height: 24px; }
+.header .logo .icon-logo { display: block; background-image: url("../images/logo.svg"); width: 222px; height: 37px; background-size: contain; }
 
-@media (max-width: 991.98px) { .header .logo { left: 50%; font-size: 1.25rem; transform: translate(-50%, -50%); } }
+@media (max-width: 991.98px) { .header .logo { left: 50%; font-size: 1.25rem; transform: translate(-50%, -50%); }
+  .header .logo .icon-logo { width: 160px; height: 27px; } }
 
 .gnb { width: 100%; height: 84px; }
 
@@ -3927,6 +3928,8 @@ html.is-scroll-up body:not(.body-main) .header { transform: translateY(0); }
 
 @media (max-width: 991.98px) { .footer .footer-bottom { padding: 15px; }
   .footer .footer-bottom .d-flex { flex-wrap: wrap; }
+  .footer .footer-logo { margin-bottom: 15px; }
+  .footer .footer-logo img { width: 85px; margin-top: 10px; }
   .footer .footer-info { font-size: 11px; }
   .footer .footer-info span::after { margin: 0 6px; }
   .footer .footer-info .copyright { margin-top: 10px; font-size: 10px; } }
@@ -4513,8 +4516,6 @@ html.is-scrolled .go-top { right: 20px; }
 
 @media (max-width: 991.98px) { .map { height: 240px !important; } }
 
-.contactus { text-align: center; }
-
 .contactus dl { display: inline-flex; flex-wrap: wrap; align-items: center; font-size: 20px; }
 
 .contactus dl dt { flex: 0 0 40px; text-align: left; margin: 15px 0; }
@@ -4529,7 +4530,7 @@ body.body-main .header { background: transparent; transform: translateY(0) !impo
 
 body.body-main .header .header-top { background: transparent; }
 
-body.body-main .header .logo .icon-logo { background-image: url("../images/lg-douzone-white.svg"); }
+body.body-main .header .logo .icon-logo { background-image: url("../images/logo-white.svg"); }
 
 body.body-main .header .gnb > ul > li > a { color: #fff; }
 
@@ -4549,7 +4550,7 @@ body.fp-viewing-section3 .header .header-top, body.fp-viewing-section5 .header .
 
 body.fp-viewing-section3 .header .logo, body.fp-viewing-section5 .header .logo { color: #000; }
 
-body.fp-viewing-section3 .header .logo .icon-logo, body.fp-viewing-section5 .header .logo .icon-logo { background-image: url("../images/lg-douzone-color.svg"); }
+body.fp-viewing-section3 .header .logo .icon-logo, body.fp-viewing-section5 .header .logo .icon-logo { background-image: url("../images/logo.svg"); }
 
 body.fp-viewing-section3 .header .gnb > ul > li > a, body.fp-viewing-section5 .header .gnb > ul > li > a { color: #000; }
 
