--- a/resources/scss/_layout.scss
+++ b/resources/scss/_layout.scss
@@ -16,7 +16,7 @@ $sitemap-z-index: 1000;
     position:fixed;top:0;left:0;z-index: $header-z-index;width:100%;;-webkit-transition:all .4s;transition:all .4s;background:#fff;
 
     .header-top{
-        position: relative;border-bottom: 1px solid rgba(255, 255, 255, 0.2);background: #fff;min-width: 1230px;
+        position: relative;border-bottom: 1px solid rgba(255, 255, 255, 0.2);background: #fff;
         body:not(.body-main) &{border-bottom: 0;}
         @include media-breakpoint-down(md) {
             min-width: 0;height: 60px;
